@@ -57,3 +57,7 @@ test {
     useJUnitPlatform()
     exclude '**/ForumApplicationTests.class'
 }
+
+bootRun {
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+}
